add_executable(${EXECUTABLE_NAME}
    main.cpp
    Graphics/GraphicsAdapterBase.hpp
    Graphics/GraphicsDeviceBase.hpp
    Graphics/GraphicsInstanceBase.hpp
    Graphics/Vulkan/HelpersVK.hpp
    Graphics/Vulkan/GraphicsAdapterVK.hpp
    Graphics/Vulkan/GraphicsAdapterVK.cpp
    Graphics/Vulkan/GraphicsDeviceVK.hpp
    Graphics/Vulkan/GraphicsDeviceVK.cpp
    Graphics/Vulkan/GraphicsInstanceVK.hpp
    Graphics/Vulkan/GraphicsInstanceVK.cpp
)

target_link_libraries(
    ${EXECUTABLE_NAME}
    PUBLIC
    glfw::glfw
    volk::volk
    vk-bootstrap::vk-bootstrap
    VulkanMemoryAllocator
    glm::glm
)